--- a/estilos.css
+++ b/estilos.css
@@ -35,7 +35,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    
+    align-items: center;
+    justify-content: center;
 }
 
 .cabeza {
@@ -84,6 +85,71 @@ body {
     transform: scale(1.2);
 }
 
+/* inicio del carrucel  */
+.container-carousel {
+    position: relative;
+    width: 850px;
+    height: 315px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    box-shadow: 0 8px 20px 0 rgba(178, 153, 255, 0.66);
+    border-radius: 15px;
+    overflow: hidden;
+  
+}
+
+.carruseles {
+    width: 800%;
+    height: 100%;
+    display: flex;
+
+}
+
+.slider-section {
+    width: calc(100% / 8);
+    height: 100%;
+}
+
+.slider-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.btn-left,
+.btn-right {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    font-size: 1.5rem;
+    background-color: transparent;
+    border-radius: 50%;
+    padding: 5px;
+    font-weight: 600;
+    cursor: pointer;
+    color: #ffffff81;
+    transform: translate(0,-50%);
+    transition: .5s ease;
+    user-select: none;
+}
+
+.btn-left:hover,
+.btn-right:hover {
+    background-color: #333333d4;
+    color: #fff;
+}
+
+.btn-left {
+    left: 10px;
+}
+
+.btn-right {
+    right: 10px;
+}
+
+/*  fin del carrucel*/
+
 .contenedoruno {
     clear: both;
     width: 90%;
@@ -94,14 +160,6 @@ body {
     margin-top: 20px;
     background-color: rgba(50, 0, 203, 0.2);
 }
-
-/*.contenedordos {
-    width: 69%;
-    height: auto;
-    margin: 0 auto;
-    float: left;
-    /*border: solid 1px blue;
-}*/
 
 .info {
 	width: 90%;
