--- a/estilos.css
+++ b/estilos.css
@@ -31,7 +31,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url(imagen/fondo17.png);
+    background-image: url(imagen/img124.jpg)/*(imagen/fondo17.png)*/;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
