--- a/estilos.css
+++ b/estilos.css
@@ -97,7 +97,7 @@ body {
 
 .cabeza {
     width: 90%;
-    height: 450px;
+    height: 45rem;
     margin: 0 auto;
     margin-top: 10px;
     border-radius: 15px;
